调整依赖包

--- a/package.json
+++ b/package.json
@@ -22,11 +22,6 @@
   },
   "homepage": "https://github.com/king-king/gulp-css-img-sprite#readme",
   "dependencies": {
-    "gulp-util": "^3.0.8",
-    "images": "^3.0.0",
-    "through2": "^2.0.3"
-  },
-  "devDependencies": {
-    "gulp": "^3.9.1"
+    "images": "^3.0.0"
   }
 }
