--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "homepage": "https://github.com/king-king/css-img-sprite#readme",
   "dependencies": {
     "images": "^3.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-csso": "^2.0.0"
   }
 }
